fixed buttons getting overlapped by particles
added z-index

--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -5,7 +5,7 @@
   padding-top: 2rem;
   padding-bottom: 2rem;
   position: relative;
-  /* z-index: 9999; */
+  z-index: 999;
 }
 
 .header__menu {
