--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -11,8 +11,6 @@
 .hero #particles-js {
   position: absolute;
   left: 0;
-  height: 100%;
-  width: 100%;
 }
 
 .hero__img {
